@@ -43,27 +43,29 @@ DetectState bzip2Parser::Parse(unsigned char *data, uint64_t len, uint64_t pos, 
             stream.next_in=NULL;
             int ret;
             blockz=csize?csize:0x10000;
-            blCount=0;
+            // Init decompressor
             ret=BZ2_bzDecompressInit(&stream, 0, 0);
-            if (ret!=BZ_OK) state=NONE;
-            else{
-                if (bzout!=nullptr) free(bzout);
+            if (ret!=BZ_OK) {
+                state=NONE;
+            } else {
+                if (bzout!=nullptr) free(bzout),bzout=nullptr;
                 bzout=(uint8_t*)calloc(BZ2BLOCK,1);
                 stream.avail_in=csize;
                 stream.next_in=(char*)&data[inSize-3];
-
-            stream.avail_out=BZ2BLOCK;
-            stream.next_out=(char*)&bzout[0];
-            ret=BZ2_bzDecompress(&stream);
-            if ((ret!=BZ_OK) && (ret!=BZ_STREAM_END)) {
-                (void)BZ2_bzDecompressEnd(&stream);
-                state=NONE;
-            }
-            blockz=0x10000;
-            if (state!=NONE) {
-                state=INFO;
-               return INFO;
-            }
+                stream.avail_out=BZ2BLOCK;
+                stream.next_out=(char*)&bzout[0];
+                ret=BZ2_bzDecompress(&stream);
+                if ((ret!=BZ_OK) && (ret!=BZ_STREAM_END)) {
+                    (void)BZ2_bzDecompressEnd(&stream);
+                    state=NONE;
+                    if (bzout!=nullptr) free(bzout),bzout=nullptr;
+                }
+                blockz=0x10000;
+                if (state!=NONE) {
+                    state=INFO;
+                    priority=0;
+                    return INFO;
+                }
             }
         } else if (state==START || state==INFO) {
             int ret;
@@ -77,8 +79,11 @@ DetectState bzip2Parser::Parse(unsigned char *data, uint64_t len, uint64_t pos, 
                 (void)BZ2_bzDecompressEnd(&stream);
                 state=NONE;
                 if (bzout!=nullptr) free(bzout),bzout=nullptr;
-            }else
-            state=INFO,blCount++;
+            } else {
+                state=INFO;
+                priority=0;
+            }
+            
             if (ret==BZ_STREAM_END) {
                 (void)BZ2_bzDecompressEnd(&stream);
                 jstart=BZip2;
@@ -89,7 +94,6 @@ DetectState bzip2Parser::Parse(unsigned char *data, uint64_t len, uint64_t pos, 
                 if (bzout!=nullptr) free(bzout),bzout=nullptr;
                 return state;
             }
-            if (blCount>4) priority=0;// after 4 blocks set priority to 0
             jend=i+1;
             if (state==INFO) return INFO;
         }
@@ -127,7 +131,6 @@ void bzip2Parser::Reset() {
     info=i=inSize=0;
     if (bzout!=nullptr) free(bzout),bzout=nullptr;
     priority=2;
-    blCount=0;
 }
 void bzip2Parser::SetEnd(uint64_t e) {
     jend=e;
