@@ -103,6 +103,7 @@ DetectState SZDDParser::Parse(unsigned char *data, uint64_t len, uint64_t pos, b
         inSize++;
         i++;
     }
+    if (state==INFO && (i-jstart)>64000) { priority=0;}
     if (state==INFO) return INFO;
     // Are we still reading data for our type
     if (state!=NONE)
