@@ -1,3 +1,10 @@
+v129
+    -Fix bzip2, tiff parser
+    -Add 0 priority parser changes to:
+     base64(1/2), bmp, pnm, szdd.
+     Priority changes from n to 0 when valid header is found and lenght of data is >64000
+    -Change zlib priority
+    -Re-enable all parser if 0 parser reports fail.
 v128
     -Change priority to 0 in parsers:
      bzip2 - after 4 blocks
